--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@tanstack/react-query": "^5.90.20",
     "axios": "^1.13.3",
     "framer-motion": "^12.29.2",
+    "i18next": "^25.8.1",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
+    "react-i18next": "^16.5.4",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.12.0",
     "recharts": "^3.7.0",
@@ -26,6 +30,7 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@tailwindcss/vite": "^4.1.18",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
