--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.12.0",
     "recharts": "^3.7.0",
+    "socket.io-client": "^4.8.3",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
