--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# Backend API base URL (no trailing slash). Must match the port your backend runs on.
-# Backend default: npm run dev in Akfeek-Backend uses port 5000.
-VITE_API_URL=http://localhost:5000
+# Backend API base URL (no trailing slash). Must match Akfeek-Backend .env PORT.
+# Backend default port: 3000 (see Akfeek-Backend/src/config/server.js).
+VITE_API_URL=http://localhost:3000
 
