--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-# Backend API base URL (no trailing slash). Default: http://localhost:5000
-VITE_API_URL=http://localhost:5000
+# Backend URL for Vite proxy in dev (must match backend PORT). Default: http://localhost:3000
+# If your backend runs on 5000, set: VITE_API_URL=http://localhost:5000
+VITE_API_URL=http://localhost:3000
